--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 * {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 body {
@@ -10,6 +12,7 @@ body {
 
 .frame {
     min-height: 500px;
+    /* height: 100vh; */
     border-radius: 8px;
     margin-top: 40px;
     margin-left: 20px;
@@ -124,6 +127,13 @@ h3 {
     .contenedor-row {
         flex-direction: column;
     }
+    form{
+        margin-bottom: 20px;
+    }
 }
 
-@media all and (max-width: 470px) {}
+@media all and (max-width: 470px) {
+    form{
+        margin-bottom: 20px;
+    }
+}
